[gd_scene load_steps=7 format=3 uid="uid://on5ej2ouvupe"]

[ext_resource type="Script" uid="uid://enuk6j4dgihg" path="res://rooms/game_over_menu.gd" id="1_jqqxd"]
[ext_resource type="PackedScene" uid="uid://beyhrqldv1hx" path="res://assets/scene_trans.tscn" id="2_rlh11"]

[sub_resource type="LabelSettings" id="LabelSettings_svwhf"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_l48o7"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_q3jxo"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_267ih"]
font_size = 32
shadow_color = Color(1, 0, 0, 1)

[node name="GameOverMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jqqxd")

[node name="SceneTransQuit" parent="." instance=ExtResource("2_rlh11")]
Target = "uid://cg3ebfge12tu4"

[node name="Text" type="Label" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 16.0
offset_right = 765.0
offset_bottom = 104.0
text = "Game Over!"
label_settings = SubResource("LabelSettings_svwhf")
horizontal_alignment = 1

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 104.0
offset_right = 704.0
offset_bottom = 168.0
text = "Score: lol, lmao"
label_settings = SubResource("LabelSettings_l48o7")
horizontal_alignment = 1

[node name="TryAgain" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 592.0
offset_right = 640.0
offset_bottom = 623.0
text = "Retry"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 656.0
offset_right = 640.0
offset_bottom = 687.0
text = "Quit"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 192.0
offset_right = 640.0
offset_bottom = 223.0
placeholder_text = "name"
alignment = 1
max_length = 12

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 256.0
offset_right = 809.0
offset_bottom = 301.0
text = "Press enter to save your score"
label_settings = SubResource("LabelSettings_q3jxo")
horizontal_alignment = 1

[node name="HighscorePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 314.0
offset_right = 768.0
offset_bottom = 576.0

[node name="Label" type="Label" parent="HighscorePanel"]
layout_mode = 2
offset_left = 104.0
offset_top = 6.0
offset_right = 286.0
offset_bottom = 51.0
size_flags_horizontal = 4
text = "HighScores:"
label_settings = SubResource("LabelSettings_267ih")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HighscorePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 70.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HighscorePanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SceneTransRetry" parent="." instance=ExtResource("2_rlh11")]
Target = "uid://dt76adorl8n2d"

[connection signal="pressed" from="TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
